@@ -5,14 +5,13 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
-import org.springframework.web.server.ResponseStatusException;
 import ru.yandex.practicum.filmorate.dto.DirectorDto;
+import ru.yandex.practicum.filmorate.dto.create.CreateDirectorDto;
 import ru.yandex.practicum.filmorate.dto.mapper.DirectorDtoMapper;
-import ru.yandex.practicum.filmorate.interfaces.DirectorStorage;
 import ru.yandex.practicum.filmorate.model.Director;
+import ru.yandex.practicum.filmorate.service.FilmService;
 
-import java.util.Collection;
-import java.util.stream.Collectors;
+import java.util.List;
 
 @Slf4j
 @RestController
@@ -20,50 +19,42 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class DirectorController {
 
-    private final DirectorStorage directorStorage;
+    private final FilmService service;
 
-    // Получение всех режиссёров
+    private final DirectorDtoMapper mapper;
+
     @GetMapping
-    public Collection<DirectorDto> getAllDirectors() {
-        return directorStorage.getAll().stream()
-                .map(DirectorDtoMapper::toDto)
-                .collect(Collectors.toList());
+    public List<DirectorDto> findAllDirectors() {
+        List<Director> directors = service.getDirectors();
+        log.info("Returning list of directors");
+        return directors.stream().map(mapper::map).toList();
     }
 
-    // Получение режиссёра по ID
     @GetMapping("/{id}")
-    public DirectorDto getDirectorById(@PathVariable Long id) {
-        Director director = directorStorage.getById(id);
-        return DirectorDtoMapper.toDto(director);
+    public DirectorDto findDirectorById(@PathVariable int id) {
+        Director director = service.findDirectorById(id);
+        log.info("Director {} is found", id);
+        return mapper.map(director);
     }
 
-    // Создание нового режиссёра
     @PostMapping
     @ResponseStatus(HttpStatus.CREATED)
-    public DirectorDto createDirector(@RequestBody @Valid DirectorDto directorDto) {
-        try {
-            Director director = DirectorDtoMapper.toEntity(directorDto);
-            Director createdDirector = directorStorage.create(director);
-            return DirectorDtoMapper.toDto(createdDirector);
-        } catch (Exception e) {
-            // Логируем ошибку и возвращаем подробное сообщение
-            log.error("Error while creating director", e);
-            throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Произошла непредвиденная ошибка.", e);
-        }
+    public DirectorDto createDirector(@RequestBody @Valid CreateDirectorDto directorDto) {
+        Director directorSaved = service.createDirector(mapper.map(directorDto));
+        log.info("Director {} is created", directorSaved.getId());
+        return mapper.map(directorSaved);
     }
 
-    // Обновление информации о режиссёре
     @PutMapping
     public DirectorDto updateDirector(@RequestBody @Valid DirectorDto directorDto) {
-        Director director = DirectorDtoMapper.toEntity(directorDto);
-        Director updatedDirector = directorStorage.update(director);
-        return DirectorDtoMapper.toDto(updatedDirector);
+        Director directorSaved = service.updateDirector(mapper.map(directorDto));
+        log.info("Director {} is updated", directorSaved.getId());
+        return mapper.map(directorSaved);
     }
 
-    // Удаление режиссёра
     @DeleteMapping("/{id}")
-    @ResponseStatus(HttpStatus.NO_CONTENT)
-    public void deleteDirector(@PathVariable Long id) {
-        directorStorage.delete(id);
+    public void deleteDirector(@PathVariable int id) {
+        service.deleteDirector(id);
+        log.info("Director {} is removed", id);
     }
 }
