@@ -1,6 +1,7 @@
 package ru.yandex.practicum.filmorate.controller;
 
 import jakarta.validation.Valid;
+import jakarta.validation.constraints.Min;
 import jakarta.validation.constraints.Positive;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -11,15 +12,12 @@ import org.springframework.web.bind.annotation.*;
 import ru.yandex.practicum.filmorate.dto.CreateFilmDto;
 import ru.yandex.practicum.filmorate.dto.FilmDto;
 import ru.yandex.practicum.filmorate.dto.mapper.FilmDtoMapper;
-import ru.yandex.practicum.filmorate.exeption.NotFoundObjectException;
-import ru.yandex.practicum.filmorate.interfaces.FilmStorage;
+import ru.yandex.practicum.filmorate.dto.mapper.MpaDtoMapper;
 import ru.yandex.practicum.filmorate.model.Film;
 import ru.yandex.practicum.filmorate.service.FilmService;
-import ru.yandex.practicum.filmorate.validator.ValidateFilm;
 
-import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Set;
 
 @Slf4j
 @Validated
@@ -28,104 +26,111 @@ import java.util.stream.Collectors;
 @RequestMapping("/films")
 public class FilmController {
 
-    private final FilmStorage filmStorage;
-    private final FilmService filmService;
-    private final ValidateFilm filmValidator;
-    private final FilmDtoMapper filmDtoMapper;
+    private static final int FIRST_FILM_BIRTHDAY = 1895;
+
+    private final FilmService service;
+
+    private final FilmDtoMapper filmMapper;
+
+    private final MpaDtoMapper ratingMapper;
+
+    @GetMapping
+    public List<FilmDto> findAll() {
+        List<Film> films = service.getFilms();
+        return films.stream().map(filmMapper::map).toList();
+    }
 
     @PostMapping
     @ResponseStatus(HttpStatus.CREATED)
-    public FilmDto postFilm(@RequestBody @Valid CreateFilmDto filmDto) {
-        log.info("Received request to create film: {}", filmDto);
-        Film film = FilmDtoMapper.map(filmDto);
-        filmValidator.validateFilm(film);
-        Film createdFilm = filmStorage.create(film);
-        log.info("Film created successfully: {}", createdFilm);
-        createdFilm.setDirectors(film.getDirectors());
-        return FilmDtoMapper.toDto(createdFilm);
+    public FilmDto create(@Valid @RequestBody CreateFilmDto filmDto) {
+        Film toCreate = filmMapper.map(filmDto);
+        Film createdFilm = service.create(toCreate);
+        service.updateGenresForFilm(createdFilm);
+        service.updateDirectorsForFilm(createdFilm);
+        createdFilm.setGenres(toCreate.getGenres());
+        createdFilm.setDirectors(toCreate.getDirectors());
+        return filmMapper.map(createdFilm);
     }
 
-    @GetMapping
-    public Collection<FilmDto> getFilms() {
-        List<Film> films = (List<Film>) filmStorage.getAll();
-        return filmStorage.getAll().stream()
-                .map(model -> FilmDtoMapper.toDto(model))
-                .collect(Collectors.toList());
-    }
-
-    @GetMapping("/{id}")
-    public ResponseEntity<FilmDto> getFilmById(@PathVariable Long id) {
-        Film film = filmStorage.getById(id);
-        if (film == null) {
-            throw new NotFoundObjectException("Фильм с ID " + id + " не найден.");
-        }
-        FilmDto filmDto = FilmDtoMapper.toDto(film);
-        return ResponseEntity.ok(filmDto);
-    }
-
-    @DeleteMapping("/{id}")
-    public ResponseEntity<Void> deleteFilm(@PathVariable Long id) {
-        Film film = filmStorage.getById(id);
-        if (film == null) {
-            throw new NotFoundObjectException("Фильм с ID " + id + " не найден.");
-        }
-
-        boolean isDeleted = filmStorage.delete(id);
-        return isDeleted ? ResponseEntity.noContent().build() :
-                ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
-    }
-
-    @GetMapping("/popular")
-    public List<FilmDto> getPopularFilms(
-            @RequestParam(value = "count", defaultValue = "10") @Positive int limit,
-            @RequestParam(value = "genreId", required = false) Long genreId,
-            @RequestParam(value = "year", required = false) Integer year) {
-        return filmService.mostPopularFilms(limit, genreId, year).stream()
-                .map(FilmDtoMapper::toDto)
-                .collect(Collectors.toList());
-    }
-
-    @PutMapping("/{id}/like/{userId}")
-    public ResponseEntity<FilmDto> addLike(@PathVariable Long id, @PathVariable Long userId) {
-        Film film = filmService.addLike(id, userId);
-        return ResponseEntity.ok(FilmDtoMapper.toDto(film));
-    }
-
-    @DeleteMapping("/{id}/like/{userId}")
-    public ResponseEntity<FilmDto> deleteLike(@PathVariable Long id, @PathVariable Long userId) {
-        Film film = filmService.removeLike(id, userId);
-        return ResponseEntity.ok(FilmDtoMapper.toDto(film));
+    @DeleteMapping("/{filmId}")
+    public void removeFilm(@PathVariable Integer filmId) {
+        service.removeFilm(filmId);
     }
 
     @PutMapping
-    public ResponseEntity<FilmDto> putFilm(@Valid @RequestBody FilmDto filmDto) {
-        Film film = FilmDtoMapper.toModel(filmDto);
-        filmValidator.validateFilm(film);
-        Film updatedFilm = filmStorage.update(film);
+    public FilmDto updateFilm(@Valid @RequestBody FilmDto filmDto) {
+        Film film = filmMapper.map(filmDto);
+        Film updatedFilm = service.updateFilm(film);
+        service.updateGenresForFilm(updatedFilm);
+        service.updateDirectorsForFilm(updatedFilm);
+        updatedFilm.setGenres(film.getGenres());
         updatedFilm.setDirectors(film.getDirectors());
-        return ResponseEntity.ok(FilmDtoMapper.toDto(updatedFilm));
+        return filmMapper.map(updatedFilm);
     }
 
-    @GetMapping("director/{id}")
-    public List<FilmDto> getFilmsByDirector(@PathVariable Long id,
-                                            @RequestParam(defaultValue = "likes") String sortBy) {
-        if (!List.of("likes", "year").contains(sortBy)) {
-            throw new IllegalArgumentException("Некорректное значение sortBy: " + sortBy);
+    @GetMapping("/{id}")
+    public FilmDto getFilm(@PathVariable int id) {
+        Film film = service.findFilmById(id);
+        film.setGenres(service.findGenresForFilm(id));
+        film.setDirectors(service.findDirectorsForFilm(id));
+        return filmMapper.map(film);
+    }
+
+    @PutMapping("/{id}/like/{userId}")
+    public void likeFilm(@PathVariable Integer id, @PathVariable Integer userId) {
+        service.addLike(id, userId);
+    }
+
+    @DeleteMapping("/{id}/like/{userId}")
+    public void unlikeFilm(@PathVariable Integer id, @PathVariable Integer userId) {
+        service.removeLike(id, userId);
+    }
+
+    @GetMapping("/popular")
+    public List<FilmDto> getPopularFilms(@RequestParam(defaultValue = "10") @Positive Integer count,
+                                         @Positive @RequestParam(required = false) Integer genreId,
+                                         @Min(value = FIRST_FILM_BIRTHDAY) @RequestParam(required = false) Integer year) {
+        List<Film> films;
+        if (genreId == null && year == null) {
+            films = service.getMostPopularFilms(count);
+        } else if (genreId != null && year == null) {
+            films = service.getPopularFilmsSortedByGenre(count, genreId);
+        } else if (genreId != null) {
+            films = service.getPopularFilmsSortedByGenreAndYear(count, genreId, year);
+        } else {
+            films = service.getPopularFilmsSortedByYear(count, year);
         }
-        List<Film> films = filmService.getFilmsByDirector(id, sortBy);
         return films.stream()
-                .map(FilmDtoMapper::toDto)
-                .collect(Collectors.toList());
+                .map(filmMapper::map)
+                .toList();
     }
 
+    @GetMapping("/director/{directorId}")
+    public ResponseEntity<Object> getFilmsByDirector(@PathVariable Integer directorId,
+                                                     @RequestParam(name = "sortBy", required = false) String sortBy) {
+        return service.getFilmsByDirectorSorted(directorId, sortBy, filmMapper);
+    }
 
     @GetMapping("/common")
-    public List<FilmDto> getCommonFilms(
-            @RequestParam Long userId,
-            @RequestParam Long friendId) {
-        log.info("Received request for common films of user {} and friend {}", userId, friendId);
-        return filmService.getCommonFilms(userId, friendId).stream()
-                .map(FilmDtoMapper::toDto)
-                .collect(Collectors.toList());
+    public ResponseEntity<Object> getCommonFilms(@RequestParam("userId") int userId,
+                                                 @RequestParam("friendId") int friendId) {
+        try {
+            List<Film> films = service.getCommonFilms(userId, friendId);
+
+            return ResponseEntity.ok(films.stream()
+                    .map(filmMapper::map)
+                    .toList());
+        } catch (IllegalArgumentException e) {
+            log.error(e.getMessage());
+            return ResponseEntity.badRequest().body(e.getMessage());
+        } catch (Exception e) {
+            log.error(e.getMessage());
+            return ResponseEntity.internalServerError().body("Internal Server Error");
+        }
+    }
+
+    @GetMapping("/search")
+    public List<Film> searchFilms(@RequestParam() String query, @RequestParam() Set<String> by) {
+        return service.searchFilms(query, by);
     }
 }
